# nginx

./: README.md
Nginx_2_Laptop_Setup/: README.md
Nginx_2_Laptop_Setup/laptop1_i5_server_and_proxy/: nginx.conf
Nginx_2_Laptop_Setup/laptop2_i3_client/: CMakeLists.txt  load_client.cpp
laptop1_backend/: CMakeLists.txt  proxy_backend_server  proxy_backend_server.cpp
laptop2_proxy/: nginx.conf
laptop3_client/: load_client.cpp
